--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,125 +22,125 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.loader {
-  display: block;
-  position: relative;
-  height: 20px;
-  width: 140px;
-  background-image: linear-gradient(#fff 20px, transparent 0),
-    linear-gradient(#fff 20px, transparent 0),
-    linear-gradient(#fff 20px, transparent 0),
-    linear-gradient(#fff 20px, transparent 0);
-  background-repeat: no-repeat;
-  background-size: 20px auto;
-  background-position: 0 0, 40px 0, 80px 0, 120px 0;
-  animation: pgfill 1s linear infinite;
-}
-@keyframes pgfill {
-  0% {
-    background-image: linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0);
-  }
-  25% {
-    background-image: linear-gradient(#ff3d00 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0);
-  }
-  50% {
-    background-image: linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#ff3d00 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0);
-  }
-  75% {
-    background-image: linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#ff3d00 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0);
-  }
-  100% {
-    background-image: linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#fff 20px, transparent 0),
-      linear-gradient(#ff3d00 20px, transparent 0);
-  }
-}
-
-/* src/styles.css */
-body {
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  max-width: 800px;
-  margin: 50px auto;
-}
-
-#searchForm {
+.wraper {
   display: flex;
-  margin-bottom: 20px;
-  width: 371px;
-  height: 40px;
-  gap: 8px;
+  width: 100%;
+  padding: 15px;
 }
 
-#searchInput {
-  flex: 1;
-  padding: 10px;
+.search-form {
+  display: flex;
+  gap: 8px;
+  margin: auto;
+}
+.search-form-input {
   width: 272px;
   height: 40px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #808080;
+  border-radius: 4px;
+  border: #808080 solid 1px;
+  padding: 4px 8px;
+  box-sizing: border-box;
 }
 
-button {
-  padding: 10px;
-  cursor: pointer;
+.search-form-input:hover {
+  border: #000 solid 1px;
+}
+
+.search-form-input:focus {
+  border: #4e75ff solid 1px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.search-form-button {
   border-radius: 8px;
   padding: 8px 16px;
-  width: 91px;
   height: 40px;
-  background: #4e75ff;
+  background-color: #4e75ff;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
 }
 
-.gallery {
+.search-form-button:hover {
+  background-color: #6c8cff;
+}
+
+ul.gallery {
+  max-width: 1440px;
   list-style: none;
-  padding: 0;
-  margin: 0;
+  padding: 24px 0 24px 0;
+  gap: 24px;
+  margin: auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-}
-
-.gallery li {
-  flex: 0 1 calc(33.33% - 10px);
-}
-
-.hidden {
-  display: none;
-}
-
-/* Loading indicator styles */
-#loadingIndicator {
-  display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100px;
+}
+
+.gallery-item {
+  flex-basis: calc(100% / 3 - 24px * 5);
+  border: 1px solid #808080;
+}
+
+.gallery-item:hover {
+  transform: scale(1.04);
+}
+
+.image-card-details {
+  display: flex;
+}
+
+.image-card-likes,
+.image-card-views,
+.image-card-comments,
+.image-card-downloads {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.bold {
+  font-weight: 600;
+  line-height: 1.33333;
+}
+
+.image-card-image {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
 }
 
 .loader {
-  border: 6px solid #f3f3f3;
-  border-top: 6px solid #3498db;
+  margin: auto;
+  width: 48px;
+  height: 48px;
+  border: 5px solid #808080;
+  border-bottom-color: #4e75ff;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  animation: spin 1s linear infinite;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
 
-@keyframes spin {
+@keyframes rotation {
   0% {
     transform: rotate(0deg);
   }
